# cfmm-routing-code

./: .gitignore  CITATION.cff  README.md  arbitrage.py  flake.nix  latexify.py  liquidation.py  numerics-two-assets.py  numerics.md  numerics.py  pyproject.toml  result  tests_numerics.py  two-asset.py  two-assets-two-chains.py
