[tool.poetry]
name = "cfmm_routing_code"
version = "0.0.1"
description = "CFMM routing"
authors = []

[tool.poetry.dependencies]
python = ">=3.11.6, <=3.11.7"

cvxpy = { version = "1.3.2", extras = ["scip", "ecos"] } # 1.3.3+ got some new deps to handle qdldl
numpy = { version = "*", extras = ["all"] }
matplotlib = { version = "*", extras = ["all"] }
latexify-py = { version = "*", extras = ["all"] }

#PySCIPOpt = {version = "4.4.0"}  # with GMP support
#PySCIPOpt = { git = "https://github.com/scipopt/PySCIPOpt.git", tag = "v4.4.0"}  # with GMP support
PySCIPOpt = { path = "/home/dz/github.com/scipopt/PySCIPOpt", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = { version = "*", extras = ["all"] }
pytest = { version = "*", extras = ["all"] }
deepdiff = { version = "*", extras = ["all"] }
