[tool.poetry]
name = "cfmm_routing_code"
version = "0.0.1"
description = "CFMM routing"
authors = []

[tool.poetry.dependencies]
python = ">=3.11.7, <3.12"

cvxpy = { version = "1.4.2", extras = ["scip", "ecos"] }
numpy = { version = "*", extras = ["all"] }
matplotlib = { version = "*", extras = ["all"] }
latexify-py = { version = "*", extras = ["all"] }

PySCIPOpt = {version = "4.4.0"}  
# PySCIPOpt = { git = "https://github.com/dzmitry-lahoda-forks/PySCIPOpt.git", rev = "81e6c92fa2256359cf3288cf544eda91e942d2c3"}  # with GMP support

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = { version = "*", extras = ["all"] }
pytest = { version = "*", extras = ["all"] }
deepdiff = { version = "*", extras = ["all"] }
